--- a/task-1-responsive-layout-and-typography/style.css
+++ b/task-1-responsive-layout-and-typography/style.css
@@ -40,6 +40,22 @@ nav ul li a{
 
 
 
+/* Author Section */
+.author {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 0;
+}
+
+.author img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin-bottom: 15px;
+}
+
+
 footer{
     text-align: center;
     margin-top: 20px;
